--- a/CursoCsharp/CursoCsharp.csproj
+++ b/CursoCsharp/CursoCsharp.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>CursoCsharp.section_4.MainEstatica</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,6 +48,12 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="section_4\Calculadora.cs" />
+    <Compile Include="section_4\MainEstatica.cs" />
+    <Compile Include="section_4\MainProduto.cs" />
+    <Compile Include="section_4\Produto.cs" />
+    <Compile Include="section_4\MainTriangulo.cs" />
+    <Compile Include="section_4\Triangulo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
