--- a/CursoCsharp/CursoCsharp.csproj
+++ b/CursoCsharp/CursoCsharp.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>CursoCsharp.section_9.DesafioEnum.ExercicioEnumMain</StartupObject>
+    <StartupObject>CursoCsharp.section_10.heranca.HerancaMain</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -48,6 +48,10 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="section_10\heranca\Account.cs" />
+    <Compile Include="section_10\heranca\BusinessAccount.cs" />
+    <Compile Include="section_10\heranca\HerancaMain.cs" />
+    <Compile Include="section_10\heranca\SavingsAccount.cs" />
     <Compile Include="section_4\Calculadora.cs" />
     <Compile Include="section_4\MainEstatica.cs" />
     <Compile Include="section_4\MainProduto.cs" />
@@ -68,6 +72,12 @@
     <Compile Include="section_6\matriz\ExemploPratico.cs" />
     <Compile Include="section_6\matriz\MatrizMain.cs" />
     <Compile Include="section_7\TopicosEspeciaisMain.cs" />
+    <Compile Include="section_9\desafio\DesafioEnumMain.cs" />
+    <Compile Include="section_9\desafio\Entities\Client.cs" />
+    <Compile Include="section_9\desafio\Entities\Order.cs" />
+    <Compile Include="section_9\desafio\Entities\OrderItem.cs" />
+    <Compile Include="section_9\desafio\Entities\Product.cs" />
+    <Compile Include="section_9\desafio\Enums\OrderStatus.cs" />
     <Compile Include="section_9\ExercioEnum\Entities\Department.cs" />
     <Compile Include="section_9\ExercioEnum\Entities\HourContract.cs" />
     <Compile Include="section_9\ExercioEnum\Entities\Worker.cs" />
