--- a/CursoCsharp/CursoCsharp.csproj
+++ b/CursoCsharp/CursoCsharp.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>CursoCsharp.section_13.StreamWriterExample</StartupObject>
+    <StartupObject>CursoCsharp.section_14.ExercicioInterface.ExercicioInterfaceMain</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -81,6 +81,13 @@
     <Compile Include="section_13\FileInfo.cs" />
     <Compile Include="section_13\StreamReader.cs" />
     <Compile Include="section_13\StreamWriterExample.cs" />
+    <Compile Include="section_14\ExercicioInterface\Entities\CarRental.cs" />
+    <Compile Include="section_14\ExercicioInterface\Entities\Invoice.cs" />
+    <Compile Include="section_14\ExercicioInterface\Entities\Vehicle.cs" />
+    <Compile Include="section_14\ExercicioInterface\ExercicioInterfaceMain.cs" />
+    <Compile Include="section_14\ExercicioInterface\Services\BrazilTaxService.cs" />
+    <Compile Include="section_14\ExercicioInterface\Services\ITaxService.cs" />
+    <Compile Include="section_14\ExercicioInterface\Services\RentalService.cs" />
     <Compile Include="section_4\Calculadora.cs" />
     <Compile Include="section_4\MainEstatica.cs" />
     <Compile Include="section_4\MainProduto.cs" />
