--- a/CursoCsharp/CursoCsharp.csproj
+++ b/CursoCsharp/CursoCsharp.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>CursoCsharp.section_15.DesafioHashSetAndSortedSet.MainDesafioHashSetAndSortedSet</StartupObject>
+    <StartupObject>CursoCsharp.section_15.DictionaryAndSortedDictionary.DictionaryMain</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -95,6 +95,7 @@
     <Compile Include="section_14\ExercicioInterface\Services\ITaxService.cs" />
     <Compile Include="section_14\ExercicioInterface\Services\RentalService.cs" />
     <Compile Include="section_15\DesafioHashSetAndSortedSet\MainDesafioHashSetAndSortedSet.cs" />
+    <Compile Include="section_15\DictionaryAndSortedDictionary\DictionaryMain.cs" />
     <Compile Include="section_15\EqualsAndHashCode\Entities\Client.cs" />
     <Compile Include="section_15\EqualsAndHashCode\EqualsAndHashCodeMain.cs" />
     <Compile Include="section_15\Generics\GenericsMain.cs" />
